# RAGoLLAMA

./: .gitignore  README.md  main_cli.py  main_streamlit.py  start_tmux.sh
cyberstalker/: cyberstalker.py
rattgollama/: .env.example  README.md  claude.md  docker-compose.yml  init.sql
team_chatbox/python/: LICENSE  README.md  appsettings.json  instructions.md  pyproject.toml  requirements.txt
team_chatbox/python/src/teams_cli/: __init__.py  app.py  auth.py  config.py  deeplink.py  endpoints.py  graph.py  printing.py  storage.py
team_chatbox/python/src/teams_cli/commands/: __init__.py  chat_send.py  chat_tail.py  chats_ls.py  login.py  me.py
team_chatbox/python/tests/: test_auth.py  test_graph.py  test_storage.py
test1/: requirements.txt
test2/: README.md  docker-compose.yml
test3_mac/: README.md
test4_RAG_CAG_Docling/: Readme.MD  docker-compose.yml  gitignore
test4_RAG_CAG_Docling_mac_fast/: docker-compose.yml
test5_Windows_MAC_LINUX/: Readme.MD  docker-compose.yml  gitignore
test5_turborag_CAG/: .gitignore  Dockerfile.base  README.md  docker-compose.yml  env  nginx.conf  pull_models.sh
test5_turborag_CAG_slow/: deploy.sh  pull_models.sh  test_ingestion.py
test6/: DEPLOYMENT.md
test6_test4plustest5/: docker-compose.yml  pull_models.sh
test6_test4plustest5_pending/: README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
test7/: Dockerfile  README.md  requirement.md
test8/: Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  main.py  requirement.md  requirements-dev.txt  requirements.txt  setup-local.sh
(+236 files in other folders)
