[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teams-cli"
version = "1.0.0"
description = "Microsoft Teams CLI for Windows with MSAL authentication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Teams CLI", email = "teams-cli@example.com"},
]
dependencies = [
    "msal==1.29.0",
    "requests==2.31.0",
    "keyring==24.3.0",
    "typer==0.9.0",
    "colorama==0.4.6",
    "rich==13.7.1",
]

[project.scripts]
teams-cli = "teams_cli.app:main"

[project.urls]
Homepage = "https://github.com/example/teams-cli"